# tooloo-v2

./: .dockerignore  .env.dev  .env.example  .gcloudignore  .gitignore  BUDDY_MANDATE.md  CALIBRATION_RESULTS.json  CMakeLists.txt  Dockerfile  GEMINI.md  MANIFEST_MISSION.md  MEMORY.md  MISSION_CONTROL.md  PIPELINE_PROOF.md  README.md  README_BUILD.md  RULE0_CORE_AUDIT.md  _run_self_improve.py  audit_ensemble.py  benchmark_metrics_report.json  buddy_audit_latest.md  calibration_cycle.py  calibration_cycles_report.json  canvas_demo.html  cloudbuild-crucible.yaml  cloudbuild-job.yaml  cloudbuild.yaml  cloudrun_deploy.sh  constants.py  dag_nodes.py  dag_orchestrator.py  debug_import.py  deploy.sh  docker-compose.yml  ephemeral_tests_xyz.py  fix_duplicate.py  fluid_benchmark_report.json  fractal_16d_inspection_report.json  full-cycle-si-04abe331.py  full-cycle-si-04abe331_blueprint.md  (+83 more)
.agent/workflows/: build-and-verify.md
.agents/workflows/: build-and-verify.md  gemini.md  sovereign-manifestation.md  (+1 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.sovereign/: PURGE_AUDIT_LOG.json  purity_cache.json
.tooloo/: dream_state.json
adr/: 0001-hybrid-ingestion-pipeline.md
claudio_processor/: __init__.py  claudio_logic.py  mcp_server.py  requirements.txt  web_server.py
claudio_v3/: mcp_server.py  realtime_logic.py
core/: ClaudioHNSynthesizer.h  dag.py  test_synth_mock.cpp
docs/: architecture.md
engine/: __init__.py  async_fluid_executor.py  auto_fixer.py  b_unit.py  bootloader.py  branch_executor.py  buddy_cache.py  buddy_cognition.py  buddy_memory.py  bus.py  calibration_engine.py  chaos_spoke.py  claudio_bridge.py  claudio_cartographer.py  claudio_engram.py  claudio_governor.py  claudio_hardener.py  cloud_rag.py  cognitive.py  cognitive_dreamer.py  cognitive_map.py  cognitive_middleware.py  config.py  conversation.py  creative_director.py  critic.py  daemon.py  decompiler.py  deep_introspector.py  dependency_analyzer.py  deployment.py  director.py  dynamic_model_registry.py  dynamic_scorer.py  engram.py  engram_visual.py  evolution.py  evolution_sota.py  executor.py  feature_registry.py  (+64 more)
full-cycle-si-691967b9/: test_component.py
full-cycle-si-ba0fcfd7/: test_component.py
lab/: manifest_buddy_demo.py  pathway_b_demo.py  sota_mega_session.py  v4_benchmark.py  viewport_warmup.py
plans/: PLANNED_VS_IMPLEMENTED.md  arch_diagram.md
protocols/: audio_engram_v1.json
psyche_bank/: adversarial_evolution_log.jsonl  benchmark_report.json  buddy_knowledge_cache.json  buddy_memory.json  buddy_profile.json  calibration_proof.json  cognitive_payloads.json  cognitive_weights.json  fast_memory.json  feature_coverage.json  forbidden_patterns.cog.json  hub_and_spoke_blueprint.md  integration_scores.json  jit_cache.json  jit_calibration.json  learned_engrams.json  medium_memory.json  medium_memory.json.PRE_PURGE_BACKUP  training_summary.json  training_telemetry.json  training_telemetry_backup.json  vector_store.json
results/: e_sim_weights_22d.json  e_sim_weights_sota.json  final_fidelity_dashboard.json  meta_cognitive_audit_report.json  monte_carlo_results_22d.json  native_telemetry.json  nba_decompiler_report.json  predictive_loop_report.json  sota_claudio_report.json  sota_orchestration_report.json  training_camp_results.json
sandbox/: broken_math.py  test_broken_math.py
scripts/: __init__.py  activate_bridge.py  adversarial_billing_trap.py  adversarial_self_play.py  adversarial_test.py  adversarial_tool_training.py  audit_phase_coherence.py  auto_maintenance.sh  autonomous_logic_test.py  autonomous_rule7_stress.py  autonomous_sota_checkup.py  benchmark_metrics.py  benchmark_runner.py  brain_routing_proof.py  brain_routing_proof_v2.py  buddy_sync.py  buddy_sync_bridge.py  build_macos.sh  calibrate_cognitive_router.py  check_vertex_diagnostic.py  claudio_auditor.py  claudio_decompiler.py  claudio_forward_pass.py  claudio_residual_engine.py  claudio_simulator.py  claudio_stress_generator.py  claudio_upscaler.py  complexity_purge.py  crawl_anthropic_academy.py  create_vector_index.py  crucible_perf_proof.py  crucible_quality_audit.py  debug_autofix.py  decompile_nba.py  deploy_cycle_1.sh  drift_sink.py  execute_claudio_mandate.py  execute_external_pipeline.py  fetch_sota_leaderboards.py  firestore_diagnostic.py  (+58 more)
simulation_zone/: SOVEREIGN.md  spaghetti.py
src/: __init__.py  hello_world.py  service.py
studio/: api.py
templates/: base.html  features.html  features_section.html  footer.html  hero.html  index.html  layout.html  pricing.html  pricing_tiers.html  spoke_ci_cd_template.yaml  testimonials.html  testimonials_carousel.html
tests/: audit_codebase.py  buddy_auditor.py  calibrate_north_star.py  conftest.py  evaluate_jit_impact.py  psyche_test_node.py  real_sota_challenge.py  simulate_tiers.py  sovereign_stress_suite.py  stress_test_mega_dag.py  temp_test_si_c3eb40ad.py  test_api_n_stroke_sync_override.py  test_art_director.py  test_benchmark_metrics.py  test_branch_executor.py  test_buddy_cache.py  test_buddy_cognition.py  test_consensus_logic.py  test_conversation.py  test_crucible.py  test_dag_edge_cases.py  test_decompiler.py  test_dynamic_model_registry.py  test_e2e_api.py  test_engine_smoke.py  test_full_cycle_si.py  test_full_cycle_si_7717a430.py  test_full_cycle_si_7fe66706.py  test_full_cycle_si_9bf27ae8.py  test_full_cycle_si_e56762ac.py  test_hello_world.py  test_jit_designer.py  test_jit_ux_sota.py  test_local_slm_client.py  test_mandate_executor.py  test_manifestation_routing.py  test_mcp_client.py  test_mega_dag.py  test_memory_tiers.py  test_meta_architect.py  (+27 more)
tooloo_core/: architecture.py
tooloo_v3_hub/: __init__.py  main.py
tooloo_v4_hub/: __init__.py  main.py  stress_jit.py
workspace_v3/claudio-engine/: CMakeLists.txt  main.py  pyproject.toml
workspace_v3/claudio-engine/core/: ClaudioHNSynthesizer.cpp  ClaudioHNSynthesizer.h  bridge.cpp
workspace_v3/claudio-engine/engine/: claudio_governor.py  decompiler.py  synthesizer.py
workspace_v3/claudio-engine/scripts/: claudio_residual_engine.py  claudio_upscaler.py
(+799 files in other folders)
