[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tooloo-v2"
version = "2.1.0"
description = "TooLoo V2 — Pure DAG Cognitive OS. Self-building autonomous intelligence engine."
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.2",
    "pydantic>=2.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.2",
    "google-genai>=1.64.0",
    "google-cloud-aiplatform>=1.60.0",
    "anthropic[vertex]>=0.40",
    "httpx>=0.28",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "ruff>=0.15",
]

[project.scripts]
tooloo-studio = "studio.api:main"

[tool.setuptools.packages.find]
include = ["engine*", "studio*", "sandbox*", "src*"]

[tool.pytest.ini_options]
# Exclude tests that require external environment not present in offline CI:
#   - test_playwright_ui.py  requires `playwright` installed + chromium + live server on :8099
#   - test_ingestion.py      targets a separate service (src/api/main.py) not in this repo
# Run them explicitly:
#   pytest tests/test_playwright_ui.py --headed=false -v --timeout=60
addopts = "--ignore=tests/test_playwright_ui.py"
markers = [
    "playwright: marks tests as Playwright UI tests (deselect with -m 'not playwright')",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
