[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tooloo-v2"
version = "3.0.0"
description = "TooLoo Core - Basic capabilities, executions, and Mega DAG variations."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "python-dotenv>=1.2",
    "anthropic[vertex]>=0.40",
    "google-genai>=1.64.0",
    "httpx>=0.28",
    "pytest>=8.0.0",
    "google-cloud-aiplatform>=1.145.0",
    "pytest-timeout>=2.4.0",
    "openai>=2.30.0",
    "google-auth>=2.49.1",
]

[tool.setuptools.packages.find]
include = ["src*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
addopts = "-v --timeout=60"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

